--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 deploy:
   provider: elasticbeanstalk
-  access_key_id: $s3_access_key_id
-  secret_access_key: $s3_secret_key
+  access_key_id: $beanstalk_access_key_id
+  secret_access_key: $beanstalk_secret_key
   region: us-east-1
   app: auth-app
   env: AuthApp-env
