updated .travis.yml with bucket_name field for beanstalk deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ deploy:
   region: us-east-1
   app: auth-app
   env: AuthApp-env
+  bucket_name: "alldredgecraigseniorproject"
   on:
     repo: AlldredgeCraigSeniorProjectTeam/auth-app
